@@ -17,6 +17,7 @@ BUGFIXES
 01-05-06    Installer password was wiped doing a rebuild, now fixed (Julien Casanova)
 
 IMPROVEMENTS
+10-05-06    A member user is now added as part of rebuild
 09-05-06    Added request history to session, ability to return to a previously
             requested page on authorisation failure
 06-05-06    Implemented a library cache for all files used on every request,
